--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "@capacitor/android": "^6.0.0",
     "@capacitor/app": "^6.0.0",
     "@capacitor/core": "^6.0.0",
-    "@capacitor/push-notifications": "^6.0.0",
     "@capacitor/preferences": "^6.0.0",
+    "@capacitor/push-notifications": "^6.0.0",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.263.1",
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@capacitor/cli": "^6.0.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "^5.9.3",
     "vite": "^5.0.8"
   },
   "scripts": {
